Fix "selection" effect remaining visible after D&D fields

--- a/knowledge-layout-editor/src/main/resources/dev/ikm/komet/kleditorapp/view/kl-editor-window.css
+++ b/knowledge-layout-editor/src/main/resources/dev/ikm/komet/kleditorapp/view/kl-editor-window.css
@@ -235,7 +235,7 @@
 }
 
 /***********  Pressed  ************/
-.window .section-view .pattern-view .pattern-container .field-view:pressed {
+.window .section-view .pattern-view .pattern-container .field-view:armed {
     -fx-border-color: #5dcf16, #5dcf16;
     -fx-background-color: white;
 }
